--- a/website/templates/first_heading.html
+++ b/website/templates/first_heading.html
@@ -1,2 +1,10 @@
 <!-- your html code here -->
-<p>Hello, I'm the first_heading.html</p>
+ <div class="col-12 d-flex justify-content-spacebetween border-top mt-4 mx-auto">
+    <div class="firstHeadingContent col-8">
+<p><strong>The First Heading</strong> Will Catch Your Eye</p>
+<p>Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesnet commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+</div>
+
+<img class="text-end rounded-circle"  src="https://picsum.photos/200">
+
+</div>
