--- a/website/templates/services.html
+++ b/website/templates/services.html
@@ -1,3 +1,11 @@
 <!-- your html code here -->
-<p>Hello, I'm the services.html</p>
-<p>Hello, I'm the services section and I was loaded using ajax from templates/services.html</p>
+<div class="col-12 d-flex justify-content-spacebetween border-top mt-4 mx-auto">
+    
+
+<img class="text-start rounded-circle"  src="../assets/img/2.jpg">
+<div class="col-8">
+    <p><strong>The Second Heading</strong> Is Pretty Cool Too.</p>
+    <p>Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesnet commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+    </div>
+
+</div>
