second-service.html

--- a/website/templates/services.html
+++ b/website/templates/services.html
@@ -1,5 +1,5 @@
 <!-- your html code here -->
-<div class="col-12 d-flex justify-content-spacebetween border-top mt-4 mx-auto">
+<div class="container col-12 d-flex justify-content-spacebetween border-top mt-4 mx-auto">
     
 
 <img class="text-start rounded-circle"  src="../assets/img/2.jpg">
