--- a/website/templates/tagline.html
+++ b/website/templates/tagline.html
@@ -1,3 +1,17 @@
-<!-- your html code here -->
-<!-- Also called a hero image or a jumbotron before bootstrap 5. This might be helpful: https://getbootstrap.com/docs/5.1/examples/jumbotron/ -->
-<p>Hello, I'm the tagline and I was loaded using ajax from templates/tagline.html</p>
+<div class="bg-image" style="position: relative" ; width: 100%; height:60%;>
+    <img src="https://static01.nyt.com/images/2019/05/29/realestate/00skyline-south4/88ce0191bfc249b6aae1b472158cccc4-superJumbo.jpg" class="w-100 h-60">
+    <div class="bg-light container-fluid d-flex align-items-center justify-content-center" style="text-align: center; --bs-bg-opacity: .5; position: absolute; top: 30%; left: 50%;
+            transform: translate(-50%, -50%); width: 98%; line-height: 1;">
+        <p style="font-size: 9vw; margin: 0;">
+            <b>One Page Wonder</b>
+        </p>
+    </div>
+    <div class="bg-light container-fluid d-flex align-items-center justify-content-center" style="text-align: center; --bs-bg-opacity: .5; position: absolute; top: 50%; left: 50%;
+        transform: translate(-50%, -50%); width: 98%; line-height: 1;">
+        <p style="font-size: 4vw; margin: 0;">
+            <b>Will Knock Your Socks Off</b>
+        </p>
+    </div>
+    <div>
+    </div>
+</div>
