second-service.html

--- a/website/templates/services.html
+++ b/website/templates/services.html
@@ -1,9 +1,9 @@
 <!-- your html code here -->
-<div class="container col-12 d-flex justify-content-spacebetween border-top mt-4 mx-auto">
+<div class="container col-12 d-flex justify-content-center border-top mt-4 mx-auto pt-4">
     
 
-<img class="text-start rounded-circle"  src="../assets/img/2.jpg">
-<div class="col-8">
+<img class="text-start rounded-circle"  src="https://picsum.photos/200">
+<div class="col-7">
     <p><strong>The Second Heading</strong> Is Pretty Cool Too.</p>
     <p>Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesnet commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
     </div>
