--- a/website/templates/portfolio.html
+++ b/website/templates/portfolio.html
@@ -1,2 +1,53 @@
 <!-- your html code here -->
-<p>Hello, I'm the portfolio.html</p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Bootstrap Div Container</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+</head>
+<body>
+<div class="container">
+    <h class="fs-1 fw-bold">Portfolio</h>
+    <p>Lorem ipsum (/ˌlɔː.rəm ˈɪp.səm/ LOR-əm IP-səm) is a dummy or placeholder text commonly used in graphic design, publishing, and web development. Its purpose is to permit a page layout to be designed, independently of the copy that will subsequently populate it.</p>
+    <div class="row d-flex justify-content-between">
+        <div class="col-4">
+            <div class="card border border-0">
+                <img src="https://via.placeholder.com/700x400" class="card-img-top" alt="700x400">
+                <div class="card-body">
+                  <h5 class="card-title">Project Name</h5>
+                  <p class="card-text">Lorem ipsum is typically a corrupted version of De finibus bonorum et malorum, a 1st-century BC text by the Roman statesman and philosopher Cicero.</p>
+                </div>
+            </div>
+        </div>
+        <div class="col-4">
+            <div class="card border border-0">
+            <img src="https://via.placeholder.com/700x400" class="card-img-top" alt="700x400">
+            <div class="card-body">
+              <h5 class="card-title">Project Name</h5>
+              <p class="card-text">Lorem ipsum is typically a corrupted version of De finibus bonorum et malorum, a 1st-century BC text by the Roman statesman and philosopher Cicero.</p>
+            </div>
+        </div>
+        </div>
+        <div class="col-4">
+            <div class="card border border-0">
+                <img src="..." class="card-img-top" alt="700x400">
+                <div class="card-body">
+                  <h5 class="card-title">Project Name</h5>
+                  <p class="card-text">Lorem ipsum is typically a corrupted version of De finibus bonorum et malorum, a 1st-century BC text by the Roman statesman and philosopher Cicero.</p>
+                </div>
+        </div>
+        </div>
+
+    </div>
+    </div>
+
+
+
+
+
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+</body>
+</html>
