--- a/website/templates/portfolio.html
+++ b/website/templates/portfolio.html
@@ -8,15 +8,15 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 <body>
-<div class="container">
+<div class="container mt-6">
     <h class="fs-1 fw-bold">Portfolio</h>
-    <p>Lorem ipsum (/ˌlɔː.rəm ˈɪp.səm/ LOR-əm IP-səm) is a dummy or placeholder text commonly used in graphic design, publishing, and web development. Its purpose is to permit a page layout to be designed, independently of the copy that will subsequently populate it.</p>
+    <p>Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesnet commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
     <div class="row d-flex justify-content-between">
         <div class="col-4">
             <div class="card border border-0">
                 <img src="https://via.placeholder.com/700x400" class="card-img-top" alt="700x400">
                 <div class="card-body">
-                  <h5 class="card-title">Project Name</h5>
+                  <h5 class="card-title text-primary">Project Name</h5>
                   <p class="card-text">Lorem ipsum is typically a corrupted version of De finibus bonorum et malorum, a 1st-century BC text by the Roman statesman and philosopher Cicero.</p>
                 </div>
             </div>
@@ -25,7 +25,7 @@
             <div class="card border border-0">
             <img src="https://via.placeholder.com/700x400" class="card-img-top" alt="700x400">
             <div class="card-body">
-              <h5 class="card-title">Project Name</h5>
+              <h5 class="card-title text-primary">Project Name</h5>
               <p class="card-text">Lorem ipsum is typically a corrupted version of De finibus bonorum et malorum, a 1st-century BC text by the Roman statesman and philosopher Cicero.</p>
             </div>
         </div>
@@ -34,7 +34,7 @@
             <div class="card border border-0">
                 <img src="..." class="card-img-top" alt="700x400">
                 <div class="card-body">
-                  <h5 class="card-title">Project Name</h5>
+                  <h5 class="card-title text-primary">Project Name</h5>
                   <p class="card-text">Lorem ipsum is typically a corrupted version of De finibus bonorum et malorum, a 1st-century BC text by the Roman statesman and philosopher Cicero.</p>
                 </div>
         </div>
