--- a/website/templates/first_heading.html
+++ b/website/templates/first_heading.html
@@ -1,5 +1,5 @@
 <!-- your html code here -->
- <div class="container col-12 d-flex justify-content-center border-top mt-4 mx-auto pt-4">
+ <div class="container col-12 d-flex justify-content-centermer border-top mt-4 mx-auto pt-4">
     <div class="col-7">
 <p><strong>The First Heading</strong> Will Catch Your Eye</p>
 <p>Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesnet commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
